# servant-experiment

./: servant-experiment.cabal
src/: API.hs  Scrape.hs  Types.hs
test/: Spec.hs
