name:                servant-experiment
version:             0.1.0
synopsis:            Serve magazine articles through a REST API powered by servant
description:         This is a first attempt at implementing a RESTful API with servant.
homepage:            http://github.com/sebastianpoeplau/servant-experiment
license:             GPL
license-file:        LICENSE
author:              Sebastian Poeplau
maintainer:          example@example.com
copyright:           2016 Sebastian Poeplau
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     API
                     , Scrape
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , flow
                     , HTTP
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , servant-server
                     , tagsoup
                     , text
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

executable servant-experiment-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-experiment
  default-language:    Haskell2010

test-suite servant-experiment-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , servant-experiment
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sebastianpoeplau/servant-experiment
